tried to pkg qs
info:
  Profile: default
  Gen: 312 -> 313
  NixOs: 24.11.20240529.ad57eef
  Kernel: 6.6.32

--- a/modules/home/scripts/qs/pyproject.toml
+++ b/modules/home/scripts/qs/pyproject.toml
@@ -6,4 +6,4 @@ build-backend = "setuptools.build_meta"
 name = "qs"
 version = "1.0"
 # dependencies = ["requests"]
-scripts.qs = "scr.main:main"
+scripts.qs = "main:main"
