package and add qs, tried to fix the colision between qs  and dev-shell
info:
  Profile: laptop
  Gen: 51 -> 52
  NixOs: 24.11.20240529.ad57eef
  Kernel: 6.6.32

--- a/pkgs/dev-shell/pyproject.toml
+++ b/pkgs/dev-shell/pyproject.toml
@@ -5,4 +5,5 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "dev-shell"
 version = "1.0"
-scripts.dev-shell = "main:main"
+
+scripts.dev-shell = "qs.main:main"
