tried to fix packaging for dev-shell
info:
  Profile: laptop
  Gen: 52 -> 53
  NixOs: 24.11.20240529.ad57eef
  Kernel: 6.6.32

--- a/pkgs/dev-shell/pyproject.toml
+++ b/pkgs/dev-shell/pyproject.toml
@@ -6,4 +6,4 @@ build-backend = "setuptools.build_meta"
 name = "dev-shell"
 version = "1.0"
 
-scripts.dev-shell = "qs.main:main"
+scripts.dev-shell = "dev_shell.main:main"
