cleanup, worked on custom iso(s)
info:
  Profile: upinix-pc
  Gen: 384 -> 385
  NixOs: 24.11.20240622.a71e967
  Kernel: 6.6.35

--- a/.sops.yaml
+++ b/.sops.yaml
@@ -7,7 +7,7 @@ creation_rules:
   #     - age:
   #       - *admin
 
-  - path_regex: secrets/infra.yaml$
+  - path_regex: misc/secrets/infra.yaml$
     key_groups:
       - age:
         - *admin
