dont auto gen sops-nix-home age key, actually the right perms for secrets/upidapi
info:
  Profile: upinix-pc
  Gen: 437 -> 438
  NixOs: 24.11.20240709.feb2849
  Kernel: 6.6.37

--- a/.sops.yaml
+++ b/.sops.yaml
@@ -30,14 +30,10 @@ creation_rules:
       - age:
         - *admin
 
-  - path_regex: secrets/users/admin$
+  - path_regex: secrets/users/upidapi$
     key_groups:
       - age:
           - *upinix-pc
           - *upinix-laptop
 
-  - path_regex: secrets/users/upidpai$
-    key_groups:
-      - age:
-          - *upinix-pc
-          - *upinix-laptop
+          - *upidapi
