fix upidapis secrets
info:
  Profile: upinix-pc
  Gen: 442 -> 443
  NixOs: 24.11.20240709.feb2849
  Kernel: 6.6.37

--- a/.sops.yaml
+++ b/.sops.yaml
@@ -30,7 +30,7 @@ creation_rules:
       - age:
         - *admin
 
-  - path_regex: secrets/users/upidapi$
+  - path_regex: secrets/users/upidapi.yaml$
     key_groups:
       - age:
           - *upinix-pc
