fix arrow keys, fix mouse, worked on the install scripts
info:
  Profile: upinix-laptop
  Gen: 61 -> 62
  NixOs: 24.11.20240731.9f918d6
  Kernel: 6.10.2

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,8 @@ __pycache__
 .ccls-cache
 modules/home/desktop/addons/ags/types
 
+# this will be auto generated 
+hosts/bootstrap/hardware.nix
+
 # ignore the image build
 result
