--- a/parts/templates/python-test/pyproject.toml
+++ b/parts/templates/python-test/pyproject.toml
@@ -2,17 +2,15 @@
 name = "sample-project"
 version = "0.1.0"
 description = ""
-authors = ["upidapi <videw@icoud.com>"]
+authors = ["Author Name <author@example.com>"]
 # readme = "README.md"
 # license = "BSD"
 packages = [
-    # you prob want to change this to the name of the pkg
-    { include = "src" }
+  { include = "sample_package" }
 ]
 
 [tool.poetry.dependencies]
-python = "^3.12"
-# add deps here
+python = "^3.10"
 
 [build-system]
 requires = ["poetry-core"]
