auto: pre rebuild commit [probably broken]
if you see this then the script failed to ammend it
i.e something broke during the update

commit changes before rebuild and amend comit later in qs

info:
  Gen: 696 -> 696 ->
  Kernel: 6.6.50
  NixOs: 24.11.20240911.4f807e8
  Profile: upinix-pc
  Type: pre-rebuild

--- a/parts/pkgs/qs/pyproject.toml
+++ b/parts/pkgs/qs/pyproject.toml
@@ -5,5 +5,5 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "qs"
 version = "1.0"
-# dependencies = ["requests"]
+dependencies = ["pyyaml"]
 scripts.qs = "qs.main:main"
