--- a/modules/home/desktop/addons/bar/ags/src/tsconfig.json
+++ b/modules/home/desktop/addons/bar/ags/src/tsconfig.json
@@ -1,18 +1,22 @@
 {
-  "compilerOptions": {
-    "target": "ES2022",
-    "module": "ES2022",
-    "lib": [
-      "ES2022"
-    ],
-    "allowJs": true,
-    "checkJs": true,
-    "strict": true,
-    "noImplicitAny": false,
-    "baseUrl": ".",
-    "typeRoots": [
-      "./types"
-    ],
-    "skipLibCheck": true
-  }
+    "$schema": "https://json.schemastore.org/tsconfig",
+    "compilerOptions": {
+        "experimentalDecorators": true,
+        "strict": true,
+        "target": "ES2022",
+        "module": "ES2022",
+        "moduleResolution": "Bundler",
+        // "checkJs": true,
+        // "allowJs": true,
+        "jsx": "react-jsx",
+        "jsxImportSource": "/home/upidapi/.local/share/ags/gtk3",
+        "paths": {
+            "astal": [
+                "/home/upidapi/.local/share/ags"
+            ],
+            "astal/*": [
+                "/home/upidapi/.local/share/ags/*"
+            ]
+        },
+    }
 }
