worked on ags bar
info:
  Gen: 900 -> 901
  Kernel: 6.6.64
  NixOs: 25.05.20241211.5d67ea6
  Profile: upinix-pc
  Type: manuall

--- a/modules/home/desktop/addons/bar/ags/src/tsconfig.json
+++ b/modules/home/desktop/addons/bar/ags/src/tsconfig.json
@@ -8,7 +8,7 @@
         "moduleResolution": "Bundler",
         // "checkJs": true,
         // "allowJs": true,
-sx",
+        "jsx": "react-jsx",
         "jsxImportSource": "/home/upidapi/.local/share/ags/gtk3",
         "paths": {
             "astal": [
