--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ __pycache__
 .ccls-cache
 .direnv
 .nvimlog
-modules/home/desktop/addons/bar/ags/src/types
+# modules/home/desktop/bar/ags/src/types
 
 # this will be auto generated 
 hosts/bootstrap/hardware.nix
