--- a/modules/home/terminal/tmux/tmux.conf
+++ b/modules/home/terminal/tmux/tmux.conf
@@ -3,16 +3,8 @@ set-option -sa terminal-overrides ",xterm*:Tc"
 # its nice to have
 set -g mouse on
 
-# set prefix
-unbind C-b
-set -g prefix C-Space
-bind C-Space send-prefix
-
-# Vim style pane selection
-bind h select-pane -L
-bind j select-pane -D 
-bind k select-pane -U
-bind l select-pane -R
+# easy reload
+# bind r source-file ~/.tmux.conf
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
@@ -34,8 +26,7 @@ bind -n S-Right next-window
 bind -n M-H previous-window
 bind -n M-L next-window
 
-set -g @catppuccin_flavour 'mocha'
-
+# set -g @catppuccin_flavour 'mocha'
 # set -g @plugin 'tmux-plugins/tpm'
 # set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'christoomey/vim-tmux-navigator'
@@ -44,12 +35,29 @@ set -g @catppuccin_flavour 'mocha'
 #
 # run '~/.tmux/plugins/tpm/tpm'
 
+
+# set prefix
+unbind C-b
+set -g prefix C-a
+bind C-a send-prefix
+
+# Vim style pane selection
+bind h select-pane -L
+bind j select-pane -D 
+bind k select-pane -U
+bind l select-pane -R
+
+bind q killp
+
+# stay in the same dir when splitting
+bind s split-window -h -c "#{pane_current_path}"
+bind v split-window -v -c "#{pane_current_path}"
+unbind '"'
+unbind %
+
 # set vi-mode
 set-window-option -g mode-keys vi
 # keybindings
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
-
-bind '"' split-window -v -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
