use a declarative jellyfin
info:
  Gen: 347 -> 348
  Kernel: 6.14.5
  NixOs: 25.05.20250508.dda3dcd
  Profile: upinix-laptop
  Type: manuall

--- a/.sops.yaml
+++ b/.sops.yaml
@@ -42,6 +42,14 @@ creation_rules:
           - *minimal-installer-x86_64
           - *full-installer-x86_64
 
+  - path_regex: secrets/server.yaml$
+    key_groups:
+      - age:
+          - *admin
+
+          - *upinix-pc
+          - *upinix-laptop
+
   # host secrets (eg host syncthing, however this shoud not actually be on a host level)
   - path_regex: secrets/hosts/upinix-pc.yaml$
     key_groups:
